*Correctly* aligned switch.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -195,13 +195,14 @@ z-index: 999;
 -ms-transition: all 0.15s ease-in-out;
 }
 .Switch.Round {
-padding: 0px 20px;
-border-radius: 40px;
+  top: 5px;
+  padding: 0px 20px;
+  border-radius: 40px;
 }
 .Switch.Round .Toggle {
-border-radius: 40px;
-width: 14px;
-height: 14px;
+  border-radius: 40px;
+  width: 14px;
+  height: 14px;
 }
 .Switch.Round.On .Toggle { left: 3%; background: #00BCD4; }
 .Switch.Round.Off .Toggle { left: 58%; background: #00BCD4}
